--- a/Test Bootstrap V-5/index.html
+++ b/Test Bootstrap V-5/index.html
@@ -12,11 +12,47 @@
 
 <body>
 
-    
 
+    <!-- Heading tags -->
+    <h1>Lorem, ipsum dolor.</h1>
+    <h6 class="h3">Lorem, ipsum dolor.</h6>
+
+
+    <!-- Display Headings -->
+    <h1 class="display-1">display 1 heading</h1>
+    <h1 class="display-4">display 2 heading</h1>
+    <h1 class="display-6">display 6 heading</h1>
+
+
+    <!-- lead Text && alignment -->
+    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
     <p class="lead text-center">Lorem ipsum dolor sit amet consectetur.</p>
     <p class="lead text-end">Lorem ipsum dolor sit amet consectetur.</p>
     <p class="lead text-start">Lorem ipsum dolor sit amet consectetur.</p>
+
+
+    <!-- Text decoration && font weight -->
+    <p class="text-decoration-underline">this is underline text</p>
+    <p class="text-decoration-line-through">this is line through text</p>
+    <p class="fw-bold">this is bold text</p>
+    <small>this is small text</small>
+
+
+    <!-- Text colours -->
+
+    <p class="text-primary">theme primary colour</p>
+    <p class="text-secondary">theme secondary colour</p>
+    <p class="text-info">theme info colour</p>
+    <p class="text-warning">theme warning colour</p>
+    <p class="text-success">theme success colour</p>
+    <p class="text-">theme danger colour</p>
+    <p class="text-muted">theme danger colour</p>
+
+
+    <!-- bg colors -->
+    <p class="text-white bg-primary">this is bg-primary</p>
+    <p class="text-white bg-secondary">this is bg-secondary</p>
+    <p class="text-white bg-danger">this is bg-danger</p>
 
 </body>
 
