--- a/Test Bootstrap V-5/index.html
+++ b/Test Bootstrap V-5/index.html
@@ -39,7 +39,6 @@
 
 
     <!-- Text colours -->
-
     <p class="text-primary">theme primary colour</p>
     <p class="text-secondary">theme secondary colour</p>
     <p class="text-info">theme info colour</p>
@@ -53,6 +52,39 @@
     <p class="text-white bg-primary">this is bg-primary</p>
     <p class="text-white bg-secondary">this is bg-secondary</p>
     <p class="text-white bg-danger">this is bg-danger</p>
+
+
+    <!-- Basic buttons -->
+    <h2>Buttons</h2>
+    <button class="btn btn-primary">danger button</button>
+    <button class="btn btn-secondary">secondary button</button>
+
+
+    <!-- Anchor tags as buttons -->
+    <h2>Links as button</h2>
+    <a href="#" class="btn btn-info">info anchor tag</a>
+    <a href="#" class="btn btn-success">success anchor tag</a>
+
+
+    <!-- button Sizes -->
+    <h2>Button Sizes</h2>
+    <button class="btn btn-lg btn-danger">large danger button</button>
+    <button class="btn btn-sm btn-warning">small warning button</button>
+
+
+    <!-- outlined styles -->
+    <h2>Button styles</h2>
+    <button class="btn btn-outline-primary">outline primary button</button>
+    <button class="btn btn-outline-dark btn-lg">large outline dark button</button>
+
+
+    <!-- button Groups -->
+    <h2>Button Groups</h2>
+    <div class="btn-group">
+        <a href="#" class="btn btn-primary">button 1</a>
+        <a href="#" class="btn btn-warning">button 2</a>
+        <a href="#" class="btn btn-success">button 3</a>
+    </div>
 
 </body>
 
