--- a/Test Bootstrap V-5/index.html
+++ b/Test Bootstrap V-5/index.html
@@ -14,8 +14,8 @@
 
 
     <!-- Heading tags -->
-    <h1>Lorem, ipsum dolor.</h1>
-    <h6 class="h3">Lorem, ipsum dolor.</h6>
+    <h1>This Is H1</h1>
+    <h6 class="h3">This is H6 But Class H3</h6>
 
 
     <!-- Display Headings -->
@@ -25,10 +25,10 @@
 
 
     <!-- lead Text && alignment -->
-    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-    <p class="lead text-center">Lorem ipsum dolor sit amet consectetur.</p>
-    <p class="lead text-end">Lorem ipsum dolor sit amet consectetur.</p>
-    <p class="lead text-start">Lorem ipsum dolor sit amet consectetur.</p>
+    <p class="lead">This Is Text Lead</p>
+    <p class="lead text-center">This Is Text Lead And Text Center</p>
+    <p class="lead text-end">This Is Text Lead and Text End</p>
+    <p class="lead text-start">This Is Text Lead And Text Start</p>
 
 
     <!-- Text decoration && font weight -->
@@ -85,6 +85,18 @@
         <a href="#" class="btn btn-warning">button 2</a>
         <a href="#" class="btn btn-success">button 3</a>
     </div>
+
+
+    <!-- margin And padding -->
+    <div class="bg-primary m-1 p-1">small margin and padding</div>
+    <div class="bg-primary m-5 p-5">large margin and padding</div>
+    <div class="bg-primary my-3 px-5">margin in y direction, padding in x direction</div>
+    <!-- my=top and buttom mx=right and left -->
+    <div class="bg-primary mt-3 mb-4 ms-5 me-1 ps-5 pt-4 pe-2 pb-1">margin & padding for each direction</div>
+    <!-- mt=top & mb=bottom & ms=start me=end  -->
+
+
+    <!-- Borders -->
 
 </body>
 
