--- a/Test Bootstrap V-5/index.html
+++ b/Test Bootstrap V-5/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
 
     <title>Document</title>
 </head>
 
-<body>
+<body class="bg-light">
 
 
     <!-- Heading tags -->
@@ -90,13 +91,134 @@
     <!-- margin And padding -->
     <div class="bg-primary m-1 p-1">small margin and padding</div>
     <div class="bg-primary m-5 p-5">large margin and padding</div>
-    <div class="bg-primary my-3 px-5">margin in y direction, padding in x direction</div>
     <!-- my=top and buttom mx=right and left -->
-    <div class="bg-primary mt-3 mb-4 ms-5 me-1 ps-5 pt-4 pe-2 pb-1">margin & padding for each direction</div>
+    <div class="bg-primary my-3 px-5">margin in y direction, padding in x direction</div>
     <!-- mt=top & mb=bottom & ms=start me=end  -->
+    <div class="bg-primary mt-3 mb-4 ms-5 me-1 ps-5 pt-4 pe-2 pb-1">margin & padding for each direction</div>
 
 
     <!-- Borders -->
+    <div class="m-3 p-3 border">default border</div>
+    <div class="m-3 p-3 border-top border-end">individual border</div>
+    <div class="m-3 p-3 border-start border-success">border success colour at start</div>
+    <div class="m-3 p-3 border-start border-danger border-5">thicker border</div>
+    <div class="m-3 p-3 rounded border border-5">rounded corners</div>
+    <div class="m-3 p-3 rounded-pill border border-5">rounded pill corners</div>
+
+
+    <!-- Box shadow -->
+    <div class="m-3 p-3 shadow-sm">element with small box shadow</div>
+    <div class="m-3 p-3 shadow-lg">element with large box shadow</div>
+
+
+    <!-- Font weight -->
+    <p>normal text</p>
+    <p class="fw-bold">bold text</p>
+    <p class="fw-bolder">bolder text</p>
+    <p class="fw-light">light text</p>
+    <p class="fst-italic fw-light">italic light text</p>
+
+
+    <!-- container -->
+    <div class="container my-5">
+        <h2>normal container</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, deserunt saepe. Officia perferendis
+            dolorum delectus distinctio! Quaerat quos amet recusandae nisi neque unde harum aperiam, iusto accusantium
+            dolorum ipsam quo?
+        </p>
+    </div>
+
+    <div class="container-fluid my-5">
+        <h2>fluid container</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, deserunt saepe. Officia perferendis
+            dolorum delectus distinctio! Quaerat quos amet recusandae nisi neque unde harum aperiam, iusto accusantium
+            dolorum ipsam quo?
+        </p>
+    </div>
+
+    <div class="container-lg my-5">
+        <h2>100% width until lg screens, than container</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, deserunt saepe. Officia perferendis
+            dolorum delectus distinctio! Quaerat quos amet recusandae nisi neque unde harum aperiam, iusto accusantium
+            dolorum ipsam quo?
+        </p>
+    </div>
+
+    <div class="container-xl my-5">
+        <h2>100% width until xl screens, than container</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, deserunt saepe. Officia perferendis
+            dolorum delectus distinctio! Quaerat quos amet recusandae nisi neque unde harum aperiam, iusto accusantium
+            dolorum ipsam quo?
+        </p>
+    </div>
+
+    <hr>
+    <!-- Grid Layout === Col -->
+
+    <div class="container-lg my-5">
+        <h2>basic grid</h2>
+        <div class="row">
+            <div class="col">
+                <div class="p-5 bg-primary text-light">col 1</div>
+            </div>
+            <div class="col">
+                <div class="p-5 bg-primary text-light">col 2</div>
+            </div>
+            <div class="col">
+                <div class="p-5 bg-primary text-light">col 3</div>
+            </div>
+            <div class="col">
+                <div class="p-5 bg-primary text-light">col 4</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg my-5">
+        <h2>column widths</h2>
+        <div class="row">
+            <div class="col-6">
+                <div class="p-5 bg-primary text-light">col 1</div>
+            </div>
+            <div class="col-3">
+                <div class="p-5 bg-primary text-light">col 2</div>
+            </div>
+            <div class="col-3">
+                <div class="p-5 bg-primary text-light">col 3</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg my-5">
+        <h2>responsive column widths</h2>
+        <div class="row">
+            <div class="col-sm-4 col-lg-6">
+                <div class="p-5 bg-primary text-light">col 1</div>
+            </div>
+            <div class="col-sm-4 col-lg-3">
+                <div class="p-5 bg-primary text-light">col 2</div>
+            </div>
+            <div class="col-sm-4 col-lg-3">
+                <div class="p-5 bg-primary text-light">col 3</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container-lg my-5">
+        <h2>justifying column</h2>
+        <!-- <div class="row justify-content-start & end & center & between"> -->
+        <div class="row justify-content-center">
+            <div class="col-md-3">
+                <div class="p-5 bg-primary text-light">col 1</div>
+            </div>
+            <div class="col-md-3">
+                <div class="p-5 bg-primary text-light">col 2</div>
+            </div>
+            <div class="col-md-3">
+                <div class="p-5 bg-primary text-light">col 3</div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
