--- a/Test Bootstrap V-5/index.html
+++ b/Test Bootstrap V-5/index.html
@@ -153,7 +153,7 @@
     </div>
 
     <hr>
-    <!-- Grid Layout === Col -->
+    <!-- Grid Layout === Col Part 1 -->
 
     <div class="container-lg my-5">
         <h2>basic grid</h2>
@@ -219,6 +219,32 @@
         </div>
     </div>
 
+
+    <!-- Grid Layout === Col Part 2 -->
+    <style>
+        section {
+            padding: 60px 0;
+        }
+    </style>
+
+    <!-- main image & intro text -->
+    <section id="intro">
+        <div class="container-lg">
+            <div class="row justify-content-center align-items-center">
+                <div class="col-md-5 text-center text-md-start">
+                    <h1>
+                        <div class="display-2">Block-Belt</div>
+                        <div class="display-5 text-muted">Your Coding Skills</div>
+                    </h1>
+                    <p class="lead my-4 text-muted">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+                </div>
+                <div class="col-md-5 text-center d-none d-md-block">
+                    <img class="img-fluid" width="400" src="./assets/img/empire.jpg">
+                </div>
+            </div>
+        </div>
+    </section>
 
 </body>
 
