--- a/Test Bootstrap V-5/index.html
+++ b/Test Bootstrap V-5/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-
     <title>Document</title>
 </head>
 
@@ -45,8 +44,8 @@
     <p class="text-info">theme info colour</p>
     <p class="text-warning">theme warning colour</p>
     <p class="text-success">theme success colour</p>
-    <p class="text-">theme danger colour</p>
-    <p class="text-muted">theme danger colour</p>
+    <p class="text-danger">theme danger colour</p>
+    <p class="text-muted">theme natox colour</p>
 
 
     <!-- bg colors -->
@@ -57,7 +56,7 @@
 
     <!-- Basic buttons -->
     <h2>Buttons</h2>
-    <button class="btn btn-primary">danger button</button>
+    <button class="btn btn-primary">primary button</button>
     <button class="btn btn-secondary">secondary button</button>
 
 
@@ -91,9 +90,9 @@
     <!-- margin And padding -->
     <div class="bg-primary m-1 p-1">small margin and padding</div>
     <div class="bg-primary m-5 p-5">large margin and padding</div>
-    <!-- my=top and buttom mx=right and left -->
+    <!-- my= top and buttom mx= right and left -->
     <div class="bg-primary my-3 px-5">margin in y direction, padding in x direction</div>
-    <!-- mt=top & mb=bottom & ms=start me=end  -->
+    <!-- mt=top & mb=bottom & ms=start  me=end  -->
     <div class="bg-primary mt-3 mb-4 ms-5 me-1 ps-5 pt-4 pe-2 pb-1">margin & padding for each direction</div>
 
 
@@ -127,7 +126,7 @@
             dolorum ipsam quo?
         </p>
     </div>
-
+    <!-- container-fluid -->
     <div class="container-fluid my-5">
         <h2>fluid container</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, deserunt saepe. Officia perferendis
@@ -135,22 +134,23 @@
             dolorum ipsam quo?
         </p>
     </div>
-
+    <!-- container-lg -->
     <div class="container-lg my-5">
-        <h2>100% width until lg screens, than container</h2>
+        <h2>100% width until lg screens, than container,lg</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, deserunt saepe. Officia perferendis
+            dolorum delectus distinctio! Quaerat quos amet recusandae nisi neque unde harum aperiam, iusto accusantium
+            dolorum ipsam quo?
+        </p>
+    </div>
+    <!-- container-xl -->
+    <div class="container-xl my-5">
+        <h2>100% width until xl screens, than container,xl</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, deserunt saepe. Officia perferendis
             dolorum delectus distinctio! Quaerat quos amet recusandae nisi neque unde harum aperiam, iusto accusantium
             dolorum ipsam quo?
         </p>
     </div>
 
-    <div class="container-xl my-5">
-        <h2>100% width until xl screens, than container</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis, deserunt saepe. Officia perferendis
-            dolorum delectus distinctio! Quaerat quos amet recusandae nisi neque unde harum aperiam, iusto accusantium
-            dolorum ipsam quo?
-        </p>
-    </div>
 
     <hr>
     <!-- Grid Layout === Col Part 1 -->
@@ -219,6 +219,34 @@
         </div>
     </div>
 
+    <!-- nmunay xom -->
+    <div class="container-lg my-5">
+        <h2>Example Me</h2>
+        <div class="row">
+            <div class="col-sm-3 col-md-4 col-lg-5 col-xl-6">
+                <div class="p-4 bg-danger text-white">
+                    col-1
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-4 col-lg-5 col-xl-6">
+                <div class="p-4 bg-danger text-white">
+                    col-1
+                </div>
+            </div>
+            <div class="col-sm-3 col-md-4 col-lg-5 col-xl-6">
+                <div class="p-4 bg-danger text-white">
+                    col-1
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Navbar -->
+    <nav class="navbar">
+                
+    </nav>
+
 
     <!-- Grid Layout === Col Part 2 -->
     <style>
@@ -226,7 +254,6 @@
             padding: 60px 0;
         }
     </style>
-
     <!-- main image & intro text -->
     <section id="intro">
         <div class="container-lg">
