--- a/Test Bootstrap V-5/index.html
+++ b/Test Bootstrap V-5/index.html
@@ -347,7 +347,7 @@
                                 <i class="bi bi-star-fill"></i>
                                 <i class="bi bi-star-fill"></i>
                             </div>
-                            <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                            <h5 class="mb-1">A must buy for every aspiring web dev </h5>
                             <p class="mb1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, sed harum
                                 suscipit nam maiores veritatis vitae numquam voluptatum saepe soluta similique inventore
                                 dolores atque a, ducimus consequuntur? Perferendis nihil soluta corporis consequuntur
@@ -371,6 +371,58 @@
                             <small>Review by Romi</small>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Content Form -->
+    <!-- Form Control && Form-Label && Form-select && Input-Group && Input-Group-text -->
+    <section id="contact">
+        <div class="container-lg">
+            <div class="text-center">
+                <h2>Get in Touch</h2>
+                <p class="lead">Question to ask? Fill out the form to contact me directly...</p>
+            </div>
+            <div class="row justify-content-center my-5">
+                <div class="col-lg-6">
+                    <form>
+                        <label for="email" class="form-label">Email Address</label>
+                        <div class="mb-4 input-group">
+                            <span class="input-group-text">
+                                <i class="bi bi-envelope-fill"></i>
+                            </span>
+                            <input type="email" class="form-control" id="email" placeholder="e.g.Romi@wxample.com">
+                        </div>
+
+                        <label for="name" class="form-label">Name:</label>
+                        <div class="input-group mb-4">
+                            <span class="input-group-text">
+                                <i class="bi bi-person-fill"></i>
+                            </span>
+                            <input type="text" class="form-control" id="name" placeholder="e.g. Lanya">
+                        </div>
+
+                        <label for="subject" class="form-label">What is your question about</label>
+                        <div class="input-group mb-4">
+                            <span class="input-group-text">
+                                <i class="bi bi-chat-right-dots-fill"></i>
+                            </span>
+                            <select class="form-select" id="subject">
+                                <option value="pricing" selected>Pricing query</option>
+                                <option value="content">Content query</option>
+                                <option value="other">Other query</option>
+                            </select>
+                        </div>
+                        <div class="form-floating mb-4 mt-5">
+                            <textarea id="query" class="form-control" style="height: 140px;"></textarea>
+                            <label for="query" class="form-conrol">Your query...</label>
+                        </div>
+                        <div class="mb-4 text-center">
+                            <button type="submit" class="btn btn-secondary">Submit</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
