--- a/Test Bootstrap V-5/home.html
+++ b/Test Bootstrap V-5/home.html
@@ -242,8 +242,59 @@
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
-    </script>
-</body>
 
+    <!-- Tabs && Nav-Tabs -->
+    <div class="container my-5">
+        <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
+                    type="button" role="tab" aria-controls="nav-home" aria-selected="true">
+                    Home
+                </button>
+
+                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
+                    type="button" role="tab" aria-controls="nav-profile" aria-selected="false">
+                    Profile
+                </button>
+
+                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact"
+                    type="button" role="tab" aria-controls="nav-contact" aria-selected="false">
+                    Contact
+                </button>
+            </div>
+        </nav>
+
+        <div class="tab-content" id="nav-tabContent">
+            <div class="tab-pane fade show active p-3" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
+                <h2>Home</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus quisquam quod esse
+                    doloremque ex cum maiores, vitae ipsa eos adipisci animi voluptatibus tenetur tempora odio vero
+                    iure, veniam molestiae laboriosam quos, laborum non inventore quo? Repellat amet rem expedita!</p>
+            </div>
+
+            <div class="tab-content" id="nav-tabContent">
+                <div class="tab-pane fade p-3" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
+                    <h2>Profile</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus quisquam quod esse
+                        doloremque ex cum maiores, vitae ipsa eos adipisci animi voluptatibus tenetur tempora odio vero
+                        iure, veniam molestiae laboriosam quos, laborum non inventore quo? Repellat amet rem expedita!
+                    </p>
+                </div>
+
+                <div class="tab-content" id="nav-tabContent">
+                    <div class="tab-pane fade p-3" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
+                        <h2>Contact</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam natus quisquam quod esse
+                            doloremque ex cum maiores, vitae ipsa eos adipisci animi voluptatibus tenetur tempora odio
+                            vero
+                            iure, veniam molestiae laboriosam quos, laborum non inventore quo? Repellat amet rem
+                            expedita!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
+        </script>
+</body>
 </html>
