--- a/Test Bootstrap V-5/index.html
+++ b/Test Bootstrap V-5/index.html
@@ -474,7 +474,7 @@
         </div>
     </section>
 
-    <!-- Modal Itself -->
+    <!-- Modal Itself ==  nawaway modal -->
     <div class="modal fade" id="reg-modal" tabindex="-1" aria-labelledby="modal-title" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -510,15 +510,23 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio unde eos harum dolore, sint libero
                 exercitationem natus laborum vero iste, nam nulla asperiores corrupti maxime ratione aliquid error
                 accusamus quae maiores velit reiciendis modi sequi.</p>
+
+            <!-- Dropdown -->
+            <div class="dropdown mt-3">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="book-dropdown"
+                    data-bs-toggle="dropdown">
+                    Choose a book title
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="book-dropdown">
+                    <li><a href="#" class="dropdown-item">Become a React Superhero</a></li>
+                    <li><a href="#" class="dropdown-item">Conquering Vue.js</a></li>
+                    <li><a href="#" class="dropdown-item">Levelling up Your Next.js</a></li>
+                </ul>
+            </div>
         </div>
     </div>
-
-
-    
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
     </script>
-
     <!-- bo Tooltip bakarman henawa -->
     <script>
         const tooltips = document.querySelectorAll('.tt');
