--- a/Test Bootstrap V-5/home.html
+++ b/Test Bootstrap V-5/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Home Bootstrap</title>
 </head>
 
@@ -17,6 +18,7 @@
     <h6 class="h3">This is H6 But Class H3</h6>
 
 
+    <!-- d-none && d-inline && d-block.   la d-inline (height & width) kar nakat -->
     <!-- Display Headings -->
     <h1 class="display-1">display 1 heading</h1>
     <h1 class="display-4">display 2 heading</h1>
@@ -294,7 +296,156 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- Input part 1 -->
+        <div class="w-50">
+            <input type="text" class="form-control" placeholder="Username" list="newlist">
+            <datalist id="newlist">
+                <option value="Value1">1</option>
+                <option value="Value2">2</option>
+                <option value="Value3">3</option>
+            </datalist>
+        </div>
+
+        <!-- Input-Group part 2 -->
+        <!-- 2 property haya yakyan input.. awa kay tr yan button yan span -->
+        <div class="input-group mt-4 mb-4 w-50">
+            <!-- <button class="btn btn-lg"><i class="bi bi-x-circle-fill"></i></button> -->
+            <button class="btn">Hello</button>
+            <!-- <span class="input-group-text">Hello</span> -->
+            <input type="text" placeholder="Name" class="form-control form-control-lg">
+        </div>
+
+
+        <!-- Hover -->
+        <div class="input-group w-50 mb-5">
+            <button class="btn btn-lg icon-link icon-link-hover link-danger"><i class="bi bi-person-fill"></i></button>
+            <input type="text" class="form-control" placeholder="Username">
+        </div>
+
+
+        <!-- Input part 3 -->
+        <div class="form-check">
+            <input type="checkbox" class="form-check-input">
+            <label for="" class="from-check-label">Hawler</label>
+        </div>
+
+        <div class="form-check">
+            <input type="radio" class="form-check-input">
+            <label for="" class="from-check-label">Hawler</label>
+        </div>
+
+        <div class="form-check form-switch">
+            <input type="checkbox" class="form-check-input">
+            <label for="" class="from-check-label">Hawler</label>
+        </div>
+
+        <div class="form-check form-check-reverse">
+            <input type="checkbox" class="form-check-input form-check-reverse">
+            <label for="" class="from-check-label">Hawler</label>
+        </div>
+
+        <div class="form-check form-check-reverse">
+            <input type="checkbox" class="form-check-input form-check-reverse" disabled>
+            <label for="" class="from-check-label">Hawler</label>
+        </div>
+
+        <div class="form-floating">
+            <input type="text" class="form-control" placeholder="Username">
+            <label>Username</label>
+        </div>
+
+
+        <!-- Table -->
+        <div class="table-responsive">
+            <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Gender</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Suhayb</td>
+                        <td>19</td>
+                        <td>Male</td>
+                    </tr>
+
+                    <tr>
+                        <td>Suhayb</td>
+                        <td>19</td>
+                        <td>Male</td>
+                    </tr>
+                    <tr>
+                        <td>Suhayb</td>
+                        <td>19</td>
+                        <td>Male</td>
+                    </tr>
+                    <tr>
+                        <td>Suhayb</td>
+                        <td>19</td>
+                        <td>Male</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                    </tr>
+                </tfoot>
+            </table>
+            <!-- Another Example -->
+            <table class="table table-danger table-hover">
+                <thead>
+                    <tr class="table-primary">
+                        <th>Name</th>
+                        <th>Age</th>
+                        <th>Gender</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Suhayb</td>
+                        <td>19</td>
+                        <td>Male</td>
+                    </tr>
+
+                    <tr>
+                        <td>Suhayb</td>
+                        <td>19</td>
+                        <td>Male</td>
+                    </tr>
+                    <tr>
+                        <td>Suhayb</td>
+                        <td>19</td>
+                        <td>Male</td>
+                    </tr>
+                    <tr>
+                        <td>Suhayb</td>
+                        <td>19</td>
+                        <td>Male</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                    </tr>
+                </tfoot>
+            </table>
+        </div>
+
+
+        <!-- Flexbox -->
+        <!-- justify-content-center && around && between... harwaha align-items-center-->
+        <!-- flex-column == ayheneta zher yak -->
+        <!-- d-flex = ayheneta tanisht yak  -->
+        <div class="d-flex">
+            <h2>Hello1</h2>
+            <h2>Hello2</h2>
+        </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js">
         </script>
 </body>
+
 </html>
